--- a/BillionaireOnForbes.ipynb
+++ b/BillionaireOnForbes.ipynb
@@ -15,7 +15,7 @@
     "\n",
     "- which industry has the most richest person ?\n",
     "- which country has the most richest person ?\n",
-    "- percentage between under 50 age and upper 50 age ?\n",
+    "- percentage between under 50 age and over 50 age billionaire ?\n",
     "\n",
     "My analysis will help me to answer these question through using Python"
    ]
